# carculator_truck

./: MANIFEST.in  README.md  requirements.txt  setup.cfg
.github/workflows/: main.yml
carculator_truck/: __init__.py  background_systems.py  driving_cycles.py  inventory.py  model.py  truck_input_parameters.py
carculator_truck/data/: default_parameters.json  payloads.yaml
conda/: meta.yaml
docs/: api.rst  conf.py  docs_requirements.txt  installation.rst  modeling.rst  usage.rst  validity.rst
tests/: test_inventory.py  test_model.py
