[metadata]
name = carculator_truck
version = attr: carculator_truck._version.__version__
author = Romain Sacchi <romain.sacchi@psi.ch>, Chris Mutel <christopher.mutel@psi.ch>,
description = Prospective environmental and economic life cycle assessment,
long_description = file: README.md, CHANGELOG.md
home-page = https://github.com/romainsacchi/carculator_truck,
license = BSD 3-Clause License
license-file = LICENSE
keywords =
classifiers =
    Intended Audience :: End Users/Desktop,
    Intended Audience :: Developers,
    Intended Audience :: Science/Research,
    License :: OSI Approved :: BSD License,
    Operating System :: MacOS :: MacOS X,
    Operating System :: Microsoft :: Windows,
    Operating System :: POSIX,
    Programming Language :: Python,
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3.5,
    Programming Language :: Python :: 3.6,
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: 3.8,
    Topic :: Scientific/Engineering :: Information Analysis,
    Topic :: Scientific/Engineering :: Mathematics,
    Topic :: Scientific/Engineering :: Visualization,

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.6